# Email-Reply-Agent

Hamna_Email_Agent/: draft_generator_tool.py  email_fetcher_tool.py
email_agent_backend/: agent.py  crew.py  draft_generator_tool.py  email_fetcher_tool.py  email_sender.py  main.py  nexa_learn.txt  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: InboxItem.tsx
frontend/src/components/ui/: accordion-01.tsx  accordion.tsx  button.tsx
